# MyDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  usflcommands.txt  vcpkg.json
.github/workflows/: ci.yml
.mydb_ai/: .mydb_history
.mydb_ai/shell.db/: MANIFEST
data/prompts/: explain_command.txt  fix_command.txt  intent_to_command.txt
docs/: Doxyfile
include/mydb/: config.hpp  db.hpp
include/mydb/catalog/: catalog.hpp  schema.hpp  table_heap.hpp  tuple.hpp  value.hpp
include/mydb/common/: slice.hpp  status.hpp  types.hpp
include/mydb/engine/: bloom_filter.hpp  compactor.hpp  memtable.hpp  skiplist.hpp  sstable.hpp  wal.hpp
include/mydb/execution/: executor.hpp  executor_context.hpp  expression.hpp  filter_executor.hpp  insert_executor.hpp  seq_scan_executor.hpp
include/mydb/index/: bplus_tree.hpp
include/mydb/network/: io_context.hpp  protocol.hpp  server.hpp
include/mydb/scripting/: python_vm.hpp
include/mydb/storage/: buffer_pool.hpp  disk_manager.hpp  lru_k_replacer.hpp  page.hpp
include/mydb/util/: similarity.hpp
src/: db.cpp  main.cpp
src/cli/: ghost_text.cpp  shell.cpp  shell_main.cpp
src/engine/: bloom_filter.cpp  compactor.cpp  memtable.cpp  skiplist.cpp  sstable_builder.cpp  sstable_reader.cpp  wal.cpp
src/network/: io_context.cpp  protocol.cpp  server.cpp
src/scripting/: python_vm.cpp
src/tools/: dashboard.cpp
src/tui/: dashboard.hpp  theme.hpp
tests/: test_bloom_filter.cpp  test_buffer_pool.cpp  test_db_persistence.cpp  test_python_proc.cpp  test_similarity.cpp  test_skiplist.cpp  test_sstable.cpp  test_wal_recovery.cpp
tools/: benchmark.py  mydb-cli.cpp  wal_inspector.cpp
